kubernetes/despliegues/7-secret.yaml
kind:           Pod
apiVersion:     v1

metadata:
    name:       pod-secret
    labels:
        app:    nginx-miweb

spec:
    containers: # Que se queden corriendo (servicios|demonios) NO SCRIPS
        -   # Contenedor de nginx
            name:   nginx
            image:  nginx:latest
            ports:
                - containerPort: 80
